# oxford_gps_decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: GPS_CAN_Database.json  GPS_params.csv
launch/: gps_reading.launch
msg/: OxfordIMU.msg  StatusGPS.msg  VelocityGPS.msg
scripts/: data_conversions.py  gps_decoder.py  gps_decoder_can.py  gps_tools.py
scripts/gps_can_read/: GPS_CAN_Database.json  gps_decoder_can.py  gps_tools.py
src/oxford_gps_decoder/: GPS_params_type.csv  data_conversions.py  gps_msg_decode.py  sample.py  simple_gps_msg_decode.py
